refactor: merchants make payments to users
