# docs/swagger.json
@@ -1338,7 +1338,7 @@
                 }
             }
         },
-        "/pay/payout": {
+        "/pay/distribute": {
             "post": {
                 "consumes": [
                     "application/json"
@@ -1358,12 +1358,12 @@
                         "required": true
                     },
                     {
-                        "description": "付款请求",
+                        "description": "分发请求",
                         "name": "request",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/payment.MerchantPayoutRequest"
+                            "$ref": "#/definitions/payment.MerchantDistributeRequest"
                         }
                     }
                 ],
@@ -1680,7 +1680,8 @@
                         "transfer",
                         "community",
                         "online",
-                        "test"
+                        "test",
+                        "distribute"
                     ]
                 }
             }
@@ -1711,12 +1712,12 @@
                 }
             }
         },
-        "payment.MerchantPayoutRequest": {
+        "payment.MerchantDistributeRequest": {
             "type": "object",
             "required": [
                 "amount",
-                "recipient_id",
-                "recipient_username"
+                "user_id",
+                "username"
             ],
             "properties": {
                 "amount": {
@@ -1726,16 +1727,15 @@
                     "type": "string",
                     "maxLength": 64
                 },
-                "recipient_id": {
-                    "type": "string",
-                    "example": "0"
-                },
-                "recipient_username": {
-                    "type": "string"
-                },
                 "remark": {
                     "type": "string",
                     "maxLength": 100
+                },
+                "user_id": {
+                    "type": "integer"
+                },
+                "username": {
+                    "type": "string"
                 }
             }
         },
@@ -1952,12 +1952,16 @@
         "user_pay_config.CreateUserPayConfigRequest": {
             "type": "object",
             "required": [
+                "distribute_rate",
                 "fee_rate",
                 "score_rate"
             ],
             "properties": {
                 "daily_limit": {
                     "type": "integer"
+                },
+                "distribute_rate": {
+                    "type": "number"
                 },
                 "fee_rate": {
                     "type": "number"
@@ -1980,12 +1984,16 @@
         "user_pay_config.UpdateUserPayConfigRequest": {
             "type": "object",
             "required": [
+                "distribute_rate",
                 "fee_rate",
                 "score_rate"
             ],
             "properties": {
                 "daily_limit": {
                     "type": "integer"
+                },
+                "distribute_rate": {
+                    "type": "number"
                 },
                 "fee_rate": {
                     "type": "number"
