# internal/model/user_pay_configs.go
@@ -33,15 +33,16 @@ const (
 )
 
 type UserPayConfig struct {
-	ID         uint64          `json:"id,string" gorm:"primaryKey;autoIncrement"`
-	Level      PayLevel        `json:"level" gorm:"uniqueIndex;not null"`
-	MinScore   int64           `json:"min_score" gorm:"not null;index:idx_score_range,priority:1"`
-	MaxScore   *int64          `json:"max_score" gorm:"index:idx_score_range,priority:2"`
-	DailyLimit *int64          `json:"daily_limit"`
-	FeeRate    decimal.Decimal `json:"fee_rate" gorm:"type:numeric(3,2);default:0;check:fee_rate >= 0 AND fee_rate <= 1"`
-	ScoreRate  decimal.Decimal `json:"score_rate" gorm:"type:numeric(3,2);default:0;check:score_rate >= 0 AND score_rate <= 1"`
-	CreatedAt  time.Time       `json:"created_at" gorm:"autoCreateTime"`
-	UpdatedAt  time.Time       `json:"updated_at" gorm:"autoUpdateTime"`
+	ID             uint64          `json:"id,string" gorm:"primaryKey;autoIncrement"`
+	Level          PayLevel        `json:"level" gorm:"uniqueIndex;not null"`
+	MinScore       int64           `json:"min_score" gorm:"not null;index:idx_score_range,priority:1"`
+	MaxScore       *int64          `json:"max_score" gorm:"index:idx_score_range,priority:2"`
+	DailyLimit     *int64          `json:"daily_limit"`
+	FeeRate        decimal.Decimal `json:"fee_rate" gorm:"type:numeric(3,2);default:0;check:fee_rate >= 0 AND fee_rate <= 1"`
+	ScoreRate      decimal.Decimal `json:"score_rate" gorm:"type:numeric(3,2);default:0;check:score_rate >= 0 AND score_rate <= 1"`
+	DistributeRate decimal.Decimal `json:"distribute_rate" gorm:"type:numeric(3,2);default:0;check:distribute_rate >= 0 AND distribute_rate <= 1"`
+	CreatedAt      time.Time       `json:"created_at" gorm:"autoCreateTime"`
+	UpdatedAt      time.Time       `json:"updated_at" gorm:"autoUpdateTime"`
 }
 
 // GetByPayScore 通过 pay_score 查询对应的支付配置
